[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BlockMan_Behaviour.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 31.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 5 )

[node name="Robson" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="DamageZoneArea" type="Area2D" parent="."]
position = Vector2( 0, 0.5 )

[node name="DamageZone" type="CollisionShape2D" parent="DamageZoneArea"]
shape = SubResource( 2 )

[node name="LeftDetectionDown" type="RayCast2D" parent="."]
position = Vector2( -35, 31 )
enabled = true

[node name="RightDetectionDown" type="RayCast2D" parent="."]
position = Vector2( 35, 31 )
enabled = true

[node name="LeftWallDetection" type="RayCast2D" parent="."]
position = Vector2( -32, 0 )
enabled = true
cast_to = Vector2( -8, 0 )

[node name="RightWallDetection" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 8, 0 )

[node name="DeathZoneArea" type="Area2D" parent="."]

[node name="DeathZone" type="CollisionShape2D" parent="DeathZoneArea"]
position = Vector2( 0, -36 )
shape = SubResource( 3 )

[connection signal="area_entered" from="DamageZoneArea" to="." method="_on_DamageZoneArea_area_entered"]
[connection signal="area_entered" from="DeathZoneArea" to="." method="_on_DeathZoneArea_area_entered"]
